deploy/canary-deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aks-helloworld-canary
    version: 1.0.1
  namespace: demo-canary
  name: aks-helloworld-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-canary
      version: 1.0.1
  template:
    metadata:
      labels:
        app: aks-helloworld-canary
        version: 1.0.1
    spec:
      containers:
        - name: canary-demo
          image: helayoty/canary-demo:2.0.0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            protocol: TCP
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 32Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-canary
  namespace: demo-canary
spec:
  type: ClusterIP
  ports:
  - port: 90
  selector:
    version: 1.0.1
    app: aks-helloworld-canary
